welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: value east is not a member of object plm.universe.Direction
      if (getDirection()==Direction.east)
                                    ^SnakeBuggle:14: error: value west is not a member of object plm.universe.Direction
      else if (getDirection()==Direction.west)
                                         ^SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (getDirection()==Direction.west)
           ^SnakeBuggle:32: error: value east is not a member of object plm.universe.Direction
      if (getDirection()==Direction.east)
                                    ^SnakeBuggle:38: error: value west is not a member of object plm.universe.Direction
      else if (getDirection()==Direction.west)
                                         ^