welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  
  def endCase():Boolean = {
    var mur:Boolean = false
    if (estFaceMur())
    {
      if (getDirection()==Direction.east)
      {
        gauche()
        mur = estFaceMur()
        droite()
        return mur
      }
      else if (getDirection()==Direction.west)
      {
        droite()
        mur = estFaceMur()
        gauche()
        return mur
      }
    }
    else
    {
      return estFaceMur()
    }
  }
  
  def pasSerpent()
  {
    if (estFaceMur())
    {
      if (getDirection()==Direction.east)
      {
        gauche()
        avance
        gauche()
      }
      else if (getDirection()==Direction.west)
      {
        droite()
        avance()
        droite()
      }
    }
    else
    {
      avance()
    }
  }
  
  baisseBrosse()
  while (!endCase())
  {
    pasSerpent()
  }
  
}